# ChangeLog for app-text/texlive-source
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 Sep 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-core-2007.ebuild:
  block xmltex, texlive provides it and may fail to install
  (http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=419987)

  19 Sep 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-core-2007.ebuild:
  add a note about tests, disable em

  19 Sep 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-core-2007.ebuild:
  remove versionnator inherit, not needed

  19 Sep 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-core-2007.ebuild:
  drop virtual/x11 reference

  19 Sep 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-core-2007.ebuild:
  Use -j1 for emake only for icu-xetex, other parts are fine

  19 Sep 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-core-2007.ebuild:
  Use included icu, system one doesnt install necessary headers to be used
  with xetex

  19 Sep 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-core-2007.ebuild:
  remove libwww dep, not needed

  18 Sep 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-core-2007.ebuild:
  remove ncurses dep, only needed for dialog

  18 Sep 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-core-2007.ebuild:
  remove dep on media-libs/gd, only needed for dvipng

  18 Sep 2007; Alexis Ballier <aballier@gentoo.org>
  -files/2007/texlive-core-2007-use-system-libtool.patch,
  texlive-core-2007.ebuild:
  remove use system libtool hack, it is a bad idea to do that without running
  eautoreconf

  18 Sep 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-core-2007.ebuild:
  cleanup old stuff, esp. xdvik that we really dont want here, it would cause
  circular deps with t1lib and use doc

  17 Sep 2007; Alexis Ballier <aballier@gentoo.org>
  texlive-core-2007.ebuild:
  remove dep on t1lib, only needed for xdvi and dvipng which are external

  17 Sep 2007; Alexis Ballier <aballier@gentoo.org>